@@ -1,14 +1,8 @@
-# Java Templated Strings
-
-## Links
-
-- JEP: https://openjdk.org/jeps/430
-- Javadocs: https://cr.openjdk.java.net/~jlaskey/templates/docs/api/java.base/java/lang/template/package-summary.html
-- Design notes: https://openjdk.org/projects/amber/design-notes/templated-strings
+# DejaVue Templates
 
 ## Run
 
 ```bash
 mvn clean package
-java --enable-preview -jar impl/target/string-templates-impl.jar 
+java impl/target/string-templates-impl.jar 
 ```
